unpackaged/main/default/objects/EBH_Deal__c/fields/Invalid_VAT_ID__c.field-meta.xml
<CustomField>
    <fullName>Invalid_VAT_ID__c</fullName>
    <description>[#EPH-7391]Deals Object - VAT Formula + New field</description>
    <formula>IF(OR(ISNULL(EBH_BusinessName__r.EBH_VATNumber__c) ,ISBLANK(EBH_BusinessName__r.EBH_VATNumber__c)) , false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valid VAT/ABN ID</label>
    <type>Checkbox</type>
</CustomField>