unpackaged/main/default/objects/EBH_Deal__c/fields/Invoice_Comment_From_Seller__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Comment_From_Seller__c</fullName>
    <description>[#EPH-7409] New field for Deals Object - Invoice comment by seller</description>
    <inlineHelpText>Comment from seller provided from Invoice Statement</inlineHelpText>
    <label>Invoice Comment From Seller</label>
    <length>250</length>
    <type>Text</type>
</CustomField>