unpackaged/main/default/objects/EBH_Deal__c/fields/Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date__c</fullName>
    <description>EPH-7402 New Invoice fields for Object: Deals</description>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>