unpackaged/main/default/objects/EBH_Deal__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <description>[#EPH-7402] New Invoice fields for Object_ Deals</description>
    <label>Invoice Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>