unpackaged/main/default/objects/EBH_Deal__c/fields/Item_Condition__c.field-meta.xml
<CustomField>
    <fullName>Item_Condition__c</fullName>
    <description>US-0010146 - [SEP][ETL] NA Unsub Deal: ETL to pull &#39;Condition&#39; for Item with Daily Job</description>
    <inlineHelpText>Item Condition (New, Refurbished, Used, etc.)</inlineHelpText>
    <label>Item Condition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>New other</fullName>
            </value>
            <value>
                <fullName>New with defects</fullName>
            </value>
            <value>
                <fullName>Certified - Refurbished</fullName>
            </value>
            <value>
                <fullName>Excellent - Refurbished</fullName>
            </value>
            <value>
                <fullName>Very Good - Refurbished</fullName>
            </value>
            <value>
                <fullName>Good - Refurbished</fullName>
            </value>
            <value>
                <fullName>Seller refurbished</fullName>
            </value>
            <value>
                <fullName>Like new</fullName>
            </value>
            <value>
                <fullName>Used</fullName>
            </value>
            <value>
                <fullName>Very good</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Acceptable</fullName>
            </value>
            <value>
                <fullName>For parts or not working</fullName>
            </value>
            <value>
                <fullName>Refurbished</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>