unpackaged/main/default/objects/EBH_Deal__c/fields/Item_ID_Product_Title__c.field-meta.xml
<CustomField>
    <fullName>Item_ID_Product_Title__c</fullName>
    <description>US-0009872</description>
    <formula>EBH_eBayItemID__c + &#39; | &#39; + EBH_ProductTitle__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item ID | Product Title</label>
    <type>Text</type>
</CustomField>