unpackaged/main/default/objects/EBH_Deal__c/fields/Item_Status__c.field-meta.xml
<CustomField>
    <fullName>Item_Status__c</fullName>
    <description>US-0009618</description>
    <label>Item Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>