unpackaged/main/default/objects/EBH_Deal__c/fields/Item_Stock__c.field-meta.xml
<CustomField>
    <fullName>Item_Stock__c</fullName>
    <label>Item Stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>