unpackaged/main/default/objects/EBH_Deal__c/fields/L2_Category__c.field-meta.xml
<CustomField>
    <fullName>L2_Category__c</fullName>
    <description>US-0010296</description>
    <label>L2 Category</label>
    <length>50</length>
    <type>Text</type>
</CustomField>