unpackaged/main/default/objects/EBH_Deal__c/fields/Last_30_ASP_Sold_Items_GMV__c.field-meta.xml
<CustomField>
    <fullName>Last_30_ASP_Sold_Items_GMV__c</fullName>
    <description>US-0009872
US-0010038-change label and order of formula</description>
    <formula>TEXT(GMV_Last_30_Days_DWH__c) +&#39; | &#39;+  TEXT(Sold_Items_Last_30_Days_DWH__c ) +&#39; | &#39;+ text( floor( ASP_Last_30_Days__c) ) + &quot;.&quot; + right( text( ( 1 + ASP_Last_30_Days__c- floor( ASP_Last_30_Days__c) ) * 100 ), 2 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last 30: GMV | Sold Items | ASP</label>
    <type>Text</type>
</CustomField>