unpackaged/main/default/objects/EBH_Deal__c/fields/Last_Modified_by_DW__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_by_DW__c</fullName>
    <description>US-0008225</description>
    <label>Last Modified by DW</label>
    <type>Date</type>
</CustomField>