unpackaged/main/default/objects/EBH_Deal__c/fields/List_Price__c.field-meta.xml
<CustomField>
    <fullName>List_Price__c</fullName>
    <description>US-0008225</description>
    <label>List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>