unpackaged/main/default/objects/EBH_Deal__c/fields/ListPriceMSKUUpper__c.field-meta.xml
<CustomField>
    <fullName>ListPriceMSKUUpper__c</fullName>
    <description>US-0008085 - [US] US Deals New Fields added to Page Layout by Profile and Permission Set</description>
    <label>List Price MSKU Upper</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>