unpackaged/main/default/objects/EBH_Deal__c/fields/Merchant_Approver__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0008086</description>
    <label>Merchant Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deals</relationshipName>
    <type>Lookup</type>
</CustomField>