unpackaged/main/default/objects/EBH_Deal__c/fields/Net_Subsidy_Amount__c.field-meta.xml
<CustomField>
    <fullName>Net_Subsidy_Amount__c</fullName>
    <description>US-0008225</description>
    <formula>If(ROUND(EBH_Subsidy__c,2) * Final_Sold_Items__c &gt; EBH_SubsidyMax__c , EBH_SubsidyMax__c, ROUND(EBH_Subsidy__c,2) * Final_Sold_Items__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Subsidy Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>