unpackaged/main/default/objects/EBH_Deal__c/fields/New_Picklist_Field__c.field-meta.xml
<CustomField>
    <fullName>New_Picklist_Field__c</fullName>
    <label>New Picklist Field</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>v1</fullName>
            </value>
            <value>
                <fullName>v2</fullName>
            </value>
            <value>
                <fullName>v3</fullName>
            </value>
            <value>
                <fullName>v4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>