unpackaged/main/default/objects/EBH_Deal__c/fields/Non_Payout_Items_Estimate_N__c.field-meta.xml
<CustomField>
    <fullName>Non_Payout_Items_Estimate_N__c</fullName>
    <defaultValue>0</defaultValue>
    <description>[#EPH-7598] Deal Object - Subsidy fields redesign for Invoicing</description>
    <label>Non Payout Items Estimate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>