unpackaged/main/default/objects/EBH_Deal__c/fields/Notify_Counter__c.field-meta.xml
<CustomField>
    <fullName>Notify_Counter__c</fullName>
    <label>Notify Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>