unpackaged/main/default/objects/EBH_Deal__c/fields/NumberOfDaysSinceDealEnd__c.field-meta.xml
<CustomField>
    <fullName>NumberOfDaysSinceDealEnd__c</fullName>
    <formula>IF(
  (today()- EBH_DealEndDate__c) &lt; 0, NULL,
   today()- EBH_DealEndDate__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Days since Deal End Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>