unpackaged/main/default/objects/EBH_Deal__c/fields/Optional_Notes__c.field-meta.xml
<CustomField>
    <fullName>Optional_Notes__c</fullName>
    <description>US-0008225</description>
    <label>Optional Notes</label>
    <type>TextArea</type>
</CustomField>