unpackaged/main/default/objects/EBH_Deal__c/fields/Oracle_ID__c.field-meta.xml
<CustomField>
    <fullName>Oracle_ID__c</fullName>
    <description>US-0008225</description>
    <formula>EBH_BusinessName__r.EBH_OracleID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oracle ID</label>
    <type>Text</type>
</CustomField>