unpackaged/main/default/objects/EBH_Deal__c/fields/Original_Deal_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Deal_End_Date__c</fullName>
    <description>US-0010019 - [NA] Subsidized Deals Contract Amendment Process - For System Use Only</description>
    <formula>Originating_Deal__r.EBH_DealEndDate__c</formula>
    <label>Original Deal End Date</label>
    <type>Date</type>
</CustomField>