unpackaged/main/default/objects/EBH_Deal__c/fields/Originating_Deal__c.field-meta.xml
<CustomField>
    <fullName>Originating_Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0008225</description>
    <label>Originating Deal</label>
    <referenceTo>EBH_Deal__c</referenceTo>
    <relationshipLabel>Deals</relationshipLabel>
    <relationshipName>Deals</relationshipName>
    <type>Lookup</type>
</CustomField>