unpackaged/main/default/objects/EBH_Deal__c/fields/Outreach_Manager__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Manager__c</fullName>
    <description>US-0010653 - Seller Manager field on Deals</description>
    <formula>EBH_BusinessName__r.Outreach_Manager__r.FirstName + &quot; &quot; +  EBH_BusinessName__r.Outreach_Manager__r.LastName</formula>
    <label>Outreach Manager</label>
    <type>Text</type>
</CustomField>