unpackaged/main/default/objects/EBH_Deal__c/fields/Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date__c</fullName>
    <description>EPH-7280 Payment Date</description>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>