unpackaged/main/default/objects/EBH_Deal__c/fields/PAYPAL_ID__c.field-meta.xml
<CustomField>
    <fullName>PAYPAL_ID__c</fullName>
    <description>[#EPH-7402] New Invoice fields for Object_ Deals</description>
    <formula>EBH_BusinessName__r.PayPal_adress__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PAYPAL ID</label>
    <type>Text</type>
</CustomField>