unpackaged/main/default/objects/EBH_Deal__c/fields/Paypal_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Paypal_Transaction_ID__c</fullName>
    <description>EPH-7280 Paypal Transaction ID</description>
    <label>Paypal Transaction ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>