unpackaged/main/default/objects/EBH_Deal__c/fields/PictureURL__c.field-meta.xml
<CustomField>
    <fullName>PictureURL__c</fullName>
    <description>Picture URL from ebay</description>
    <label>PictureURL</label>
    <type>Url</type>
</CustomField>