unpackaged/main/default/objects/EBH_Deal__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <description>[#EPH-7402] New Invoice fields for Object_ Deals</description>
    <formula>EBH_BusinessName__r.EBH_BillingPostalCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Postal Code</label>
    <type>Text</type>
</CustomField>