unpackaged/main/default/objects/EBH_Deal__c/fields/Preview_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Preview_Date_Time__c</fullName>
    <description>US-0010984 - Emails are sent to other sellers when cancelling Subsidized deals
US-0011505</description>
    <label>Preview Date/Time</label>
    <type>DateTime</type>
</CustomField>