unpackaged/main/default/objects/EBH_Deal__c/fields/Quantity_Limitation_per_Purchaser__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Limitation_per_Purchaser__c</fullName>
    <description>US-0008178 : [US]* Deals Mass Cancellation Process for Deals Managers</description>
    <label>Quantity Limitation per Purchaser</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>