unpackaged/main/default/objects/EBH_Deal__c/fields/Quantity_sold_prior__c.field-meta.xml
<CustomField>
    <fullName>Quantity_sold_prior__c</fullName>
    <description>US-0008225</description>
    <label>Quantity sold prior to deal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>