unpackaged/main/default/objects/EBH_Deal__c/fields/Rank__c.field-meta.xml
<CustomField>
    <fullName>Rank__c</fullName>
    <description>US-0018763 Deals - Masterschedule - New Page &#39;Daily View on Deal Object</description>
    <label>Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>