unpackaged/main/default/objects/EBH_Deal__c/fields/Reason_for_Amendment__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Amendment__c</fullName>
    <description>US-0010019 - [NA] Subsidized Deals Contract Amendment Process</description>
    <label>Reason for Amendment</label>
    <type>TextArea</type>
</CustomField>