unpackaged/main/default/objects/EBH_Deal__c/fields/Reason_for_Payment_Rejection__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Payment_Rejection__c</fullName>
    <description>EPH-7280 Reason for Payment Rejection</description>
    <label>Reason for Payment Rejection</label>
    <length>50</length>
    <type>Text</type>
</CustomField>