unpackaged/main/default/objects/EBH_Deal__c/fields/RemainingAmountToBePaid__c.field-meta.xml
<CustomField>
    <fullName>RemainingAmountToBePaid__c</fullName>
    <description>Calculated: 
if &lt;status&gt;!=&quot;Completed&quot; 
then return &lt;subsidy forecast&gt; minus &lt;EBH_AmountAlreadyPaid__c&gt;
else return &lt;EBH_SoldItemsEligible_c&gt; minus &lt;EBH_AmountAlreadyPaid_c&gt;</description>
    <formula>IF( NOT(ISPICKVAL(EBH_Status__c ,&quot;Completed&quot;)), EBH_SubsidyForecast__c - AmountAlreadyPaid__c , EBH_Payout_SI_calc__c - AmountAlreadyPaid__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining amount to be paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>