unpackaged/main/default/objects/EBH_Deal__c/fields/Returns_Cncl_UPI__c.field-meta.xml
<CustomField>
    <fullName>Returns_Cncl_UPI__c</fullName>
    <description>US-0008225</description>
    <formula>EBH_SoldItems__c - Final_Sold_Items__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Returns/Cncl/UPI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>