unpackaged/main/default/objects/EBH_Deal__c/fields/RevRollup__c.field-meta.xml
<CustomField>
    <fullName>RevRollup__c</fullName>
    <description>US-0011614 - Add &quot;Rev Roll up&quot; as an additional column for Mass Deal Approvals
use only in Mass Deal Approvals</description>
    <formula>TEXT(EBH_BusinessName__r.EBH_RevRollup__c)</formula>
    <label>Rev Roll-up</label>
    <type>Text</type>
</CustomField>