unpackaged/main/default/objects/EBH_Deal__c/fields/Seller_Approved__c.field-meta.xml
<CustomField>
    <fullName>Seller_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0008225</description>
    <label>Seller Approved</label>
    <type>Checkbox</type>
</CustomField>