unpackaged/main/default/objects/EBH_Deal__c/fields/Seller_Approver_1__c.field-meta.xml
<CustomField>
    <fullName>Seller_Approver_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0008225</description>
    <label>Seller Approver 1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Deals</relationshipLabel>
    <relationshipName>Deals</relationshipName>
    <type>Lookup</type>
</CustomField>