unpackaged/main/default/objects/EBH_Deal__c/fields/Seller_Approver_2__c.field-meta.xml
<CustomField>
    <fullName>Seller_Approver_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0008225</description>
    <label>Seller Approver 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Deals (Seller Approver 2)</relationshipLabel>
    <relationshipName>Deals1</relationshipName>
    <type>Lookup</type>
</CustomField>