unpackaged/main/default/objects/EBH_Deal__c/fields/Seller_Approver_3__c.field-meta.xml
<CustomField>
    <fullName>Seller_Approver_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0008225</description>
    <label>Seller Approver 3</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Deals (Seller Approver 3)</relationshipLabel>
    <relationshipName>Deals2</relationshipName>
    <type>Lookup</type>
</CustomField>