unpackaged/main/default/objects/EBH_Deal__c/fields/Seller_Approver_3_Email__c.field-meta.xml
<CustomField>
    <fullName>Seller_Approver_3_Email__c</fullName>
    <description>US-0008605 - [US] Email address of Seller Approver of NA Deal captured on Deal Record</description>
    <formula>Seller_Approver_3__r.Email</formula>
    <label>Seller Approver 3 Email</label>
    <type>Text</type>
</CustomField>