unpackaged/main/default/objects/EBH_Deal__c/fields/Seller_Contact__c.field-meta.xml
<CustomField>
    <fullName>Seller_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Seller Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Deals (Seller Contact)</relationshipLabel>
    <relationshipName>Deals5</relationshipName>
    <type>Lookup</type>
</CustomField>