unpackaged/main/default/objects/EBH_Deal__c/fields/Seller_Deal_Program__c.field-meta.xml
<CustomField>
    <fullName>Seller_Deal_Program__c</fullName>
    <formula>Text( EBH_BusinessName__r.EBH_DealsProgram__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seller Deal Program</label>
    <type>Text</type>
</CustomField>