unpackaged/main/default/objects/EBH_Deal__c/fields/Seller_Growth_Portal_Culture__c.field-meta.xml
<CustomField>
    <fullName>Seller_Growth_Portal_Culture__c</fullName>
    <formula>Text( EBH_BusinessName__r.EBH_GBCulture__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seller Growth Portal Culture</label>
    <type>Text</type>
</CustomField>