unpackaged/main/default/objects/EBH_Deal__c/fields/Seller_Name__c.field-meta.xml
<CustomField>
    <fullName>Seller_Name__c</fullName>
    <description>US-0008225</description>
    <label>Seller Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>