unpackaged/main/default/objects/EBH_Deal__c/fields/Seller_Portal_Status__c.field-meta.xml
<CustomField>
    <fullName>Seller_Portal_Status__c</fullName>
    <description>AC0-US-0011668</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Deal proposed to eBay</fullName>
            </value>
            <value>
                <fullName>Please agree on the proposed Deal</fullName>
            </value>
            <value>
                <fullName>Negotiation</fullName>
            </value>
            <value>
                <fullName>Negotiation Amended</fullName>
            </value>
            <value>
                <fullName>Deal agreed</fullName>
            </value>
            <value>
                <fullName>Deal in execution</fullName>
            </value>
            <value>
                <fullName>Deal ended</fullName>
            </value>
            <value>
                <fullName>Deal proposal rejected</fullName>
            </value>
            <value>
                <fullName>Invoice verification in process by eBay</fullName>
            </value>
            <value>
                <fullName>Invoicing in process</fullName>
            </value>
            <value>
                <fullName>Clarification on invoicing</fullName>
            </value>
            <value>
                <fullName>Please provide an invoice</fullName>
            </value>
            <value>
                <fullName>Invoice rejected, please verify</fullName>
            </value>
            <value>
                <fullName>Payment in process</fullName>
            </value>
            <value>
                <fullName>Deal sent for payment</fullName>
            </value>
            <value>
                <fullName>Payment completed</fullName>
            </value>
            <value>
                <fullName>Payment rejected</fullName>
            </value>
            <value>
                <fullName>Deal closed</fullName>
            </value>
            <value>
                <fullName>Invitation to Deals</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Editable</fullName>
            </value>
            <value>
                <fullName>Pending Review</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Running</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>