unpackaged/main/default/objects/EBH_Deal__c/fields/Seller_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>Seller_Response_Time__c</fullName>
    <description>US-0008225</description>
    <label>Seller Response Time</label>
    <type>DateTime</type>
</CustomField>