unpackaged/main/default/objects/EBH_Deal__c/fields/Seller_s_Dispute_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Seller_s_Dispute_Quantity__c</fullName>
    <description>US-0008225</description>
    <label>Seller&#39;s Dispute Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>