unpackaged/main/default/objects/EBH_Deal__c/fields/SellerAddress__c.field-meta.xml
<CustomField>
    <fullName>SellerAddress__c</fullName>
    <description>US-0009326 To support sending automated emails to customers &quot;AU Deal Template without Subsidy&quot; and &quot;AU Deal Template with Subsidy&quot;</description>
    <formula>EBH_BusinessName__r.EBH_FullBillingAddress__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Seller&#39;s Billing Address</inlineHelpText>
    <label>Seller Address</label>
    <type>Text</type>
</CustomField>