unpackaged/main/default/objects/EBH_Deal__c/fields/SellerInviteDate__c.field-meta.xml
<CustomField>
    <fullName>SellerInviteDate__c</fullName>
    <description>US-0009653 - [DE-Deals-Fulfillment] New Deal Proposal Flow from Fulfillment Dashboard</description>
    <label>SellerInviteDate</label>
    <type>DateTime</type>
</CustomField>