unpackaged/main/default/objects/EBH_Deal__c/fields/Sellers_Dispute_Subsidy__c.field-meta.xml
<CustomField>
    <fullName>Sellers_Dispute_Subsidy__c</fullName>
    <description>US-0008225</description>
    <label>Sellers Dispute Subsidy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>