unpackaged/main/default/objects/EBH_Deal__c/fields/SellerVATNumber__c.field-meta.xml
<CustomField>
    <fullName>SellerVATNumber__c</fullName>
    <description>US-0009326 To support sending automated emails to customers &quot;AU Deal Template without Subsidy&quot; and &quot;AU Deal Template with Subsidy&quot;</description>
    <formula>EBH_BusinessName__r.EBH_VATNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seller VAT/ABN Number</label>
    <type>Text</type>
</CustomField>