unpackaged/main/default/objects/EBH_Deal__c/fields/Sent_To_Data_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Sent_To_Data_Warehouse__c</fullName>
    <description>US-0008225</description>
    <label>Sent To Data Warehouse</label>
    <type>DateTime</type>
</CustomField>