unpackaged/main/default/objects/EBH_Deal__c/fields/Shipping_Rate_Funding__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Rate_Funding__c</fullName>
    <description>US-0006971 [AU] Deals Accept - Send Deals Accept with/without Subsidy Template to AU Sellers</description>
    <inlineHelpText>eBay contribution towards Sellers domestic shipping cost</inlineHelpText>
    <label>Shipping Rate Funding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>