unpackaged/main/default/objects/EBH_Deal__c/fields/SiteURL__c.field-meta.xml
<CustomField>
    <fullName>SiteURL__c</fullName>
    <description>EPH-7342: storing url of the site (link)</description>
    <label>SiteURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>