unpackaged/main/default/objects/EBH_Deal__c/fields/Sold_Item_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Sold_Item_Effective_Date__c</fullName>
    <description>US-0008225</description>
    <label>Sold Item Effective Date</label>
    <type>Date</type>
</CustomField>