unpackaged/main/default/objects/EBH_Deal__c/fields/Sold_Items_Disputes__c.field-meta.xml
<CustomField>
    <fullName>Sold_Items_Disputes__c</fullName>
    <description>US-0008225</description>
    <label>Sold Items Disputes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>