unpackaged/main/default/objects/EBH_Deal__c/fields/Sold_Items_Last_60_Days_DWH__c.field-meta.xml
<CustomField>
    <fullName>Sold_Items_Last_60_Days_DWH__c</fullName>
    <description>US-0009618</description>
    <label>Sold Items Last 60 Days (DWH)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>