unpackaged/main/default/objects/EBH_Deal__c/fields/Sold_Items_UDAF__c.field-meta.xml
<CustomField>
    <fullName>Sold_Items_UDAF__c</fullName>
    <description>US-0010752 - retrieve UDAF Sold Items for NA Unsub Deals</description>
    <inlineHelpText>Unsubsidized Deals Awareness Flow Sold Items</inlineHelpText>
    <label>Sold Items (UDAF)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>