unpackaged/main/default/objects/EBH_Deal__c/fields/SP_Category__c.field-meta.xml
<CustomField>
    <fullName>SP_Category__c</fullName>
    <description>US-0012156</description>
    <formula>TEXT(EBH_Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category</label>
    <type>Text</type>
</CustomField>