unpackaged/main/default/objects/EBH_Deal__c/fields/Statement_Accepted_by_Seller__c.field-meta.xml
<CustomField>
    <fullName>Statement_Accepted_by_Seller__c</fullName>
    <description>EPH-7280 Statement Accepted by Seller</description>
    <label>Statement Accepted by Seller</label>
    <type>DateTime</type>
</CustomField>