unpackaged/main/default/objects/EBH_Deal__c/fields/Statement_Accepted_From_by_Seller__c.field-meta.xml
<CustomField>
    <fullName>Statement_Accepted_From_by_Seller__c</fullName>
    <description>EPH-7280 Statement Accepted From by Seller</description>
    <label>Statement Accepted From by Seller</label>
    <length>50</length>
    <type>Text</type>
</CustomField>