unpackaged/main/default/objects/EBH_Deal__c/fields/Statement_Send_Date__c.field-meta.xml
<CustomField>
    <fullName>Statement_Send_Date__c</fullName>
    <description>EPH-7280 Statement Send Date</description>
    <label>Statement Send Date</label>
    <type>DateTime</type>
</CustomField>